# solvecdp

./: .gitignore  CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
solvecdp/: _modidx.py  core.py
tools/: get_json.sh
