[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "solvecdp"
dynamic = ["version"]
description = "Lightweight Chrome Debug Protocol (CDP) client for solveit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "dialoghelper",
  "fastcore"
]

[project.urls]
Repository = "https://github.com/AnswerDotAI/solvecdp"
Documentation = "https://AnswerDotAI.github.io/solvecdp/"

[project.entry-points.nbdev]
solvecdp = "solvecdp._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "solvecdp.__version__"}

[tool.setuptools.packages.find]
include = ["solvecdp"]

[tool.setuptools.package-data]
solvecdp = ["*.json"]

[tool.nbdev]
allowed_metadata_keys = ['solveit']
allowed_cell_metadata_keys = ['solveit_ai']
